Add static multi-node cluster mode
